--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,5 +14,7 @@ jobs:
       - name: Run Renovate
         uses: renovatebot/github-action@v36.0.0
         with:
+          command: renovate
           useSlim: false
           token: ${{ secrets.GITHUB_TOKEN }}
+          config: renovate.json
