--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,12 +9,11 @@ jobs:
   renovate:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Run Renovate
+      - name: Checkout
+        uses: actions/checkout@v3.3.0
+      - name: Self-hosted Renovate
         uses: renovatebot/github-action@v36.0.0
         with:
-          command: renovate
           useSlim: false
           token: ${{ secrets.GITHUB_TOKEN }}
           config: renovate.json
